# daedalus

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.qa  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  repos.example.yml  run_pr_review.py  run_task.py  run_ticket.py
.github/workflows/: ci.yml
agents/: architect.md  changelog.md  default.md  implementer.md  planner.md  pr_author.md  pr_reviewer.md  pr_reviewer_ado.md  qa.md  reviewer.md  security.md
agents/standards/: coding.md  (+2 more)
backlog/: _template.md  ado-pipeline-pr-review-trigger.md  ado-pr-reviewer.md  bug-orphaned-docker-containers.md  bug-pr-title-uses-agent-stdout.md  bug-push-before-pr-creation.md  bug-qa-agent-uv-not-allowed.md  cli-package.md  cloud-deployment-k8s.md  cloud-provider-abstractions.md  container-registry-publishing.md  demo-dockerfile.md  demo-stats-endpoint.md  demo-stats-on-homepage.md  demo-ux-overhaul.md  doc-update-agent.md  enhanced-reviewer-agent.md  move-pr-creation-to-workflow.md  per-repo-agent-config.md  planner-reads-test-state.md  post-pr-review-loop.md  pr-body-via-file.md  security-scan-pipeline.md  security-scanner-agent.md  self-repair-loop.md  slack-threading.md  split-activities-module.md  split-test-system.md  validated-by-trailer.md  work-on-existing-branch.md
docs/: ADR-001-pr-creation-in-workflow.md  architecture.md  vision.md
sandbox/: target.py
src/: activities.py  models.py  ticket.py  worker.py  workflows.py
tests/: test_activities.py  test_git_integration.py  test_ticket.py  test_workflows.py
(+9 files in other folders)
