[project]
name = "daedalus"
version = "0.3.0"
description = "Multi-agent coding workflow orchestrated by Temporal and Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "David Walker" }]
dependencies = [
    "temporalio>=1.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
